--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ display:flex;
   .header-bottom{
     display:flex;
     justify-content: space-evenly;
+    padding-top:7.2rem;
   }
 
 .header-text p ,.header-title h1{
