--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ line-height: 2.5rem; /* 166.667% */
     display:flex;
     justify-content: space-around;
     padding-top:7.2rem;
+    padding-bottom:5.9rem;
 
 
   }
