--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@ position:relative;
 }
 
 
-
+.box {
+      align-items: flex-start;
+}
 header:before{
   position: absolute;
   content: "";
@@ -158,7 +160,7 @@ line-height: 2.5rem; /* 166.667% */
 
   .header-bottom{
     display:flex;
-    justify-content: space-around;
+
     padding-top:4.7rem;
     padding-bottom:5.9rem;
 
