--- a/style.css
+++ b/style.css
@@ -157,15 +157,21 @@ font-style: normal;
 font-weight: 400;
 line-height: 2.5rem; /* 166.667% */
   }
-
+.box:nth-child(1){
+      margin-left: 7.2rem;
+}
   .header-bottom{
     display:flex;
-justify-content:space-around;
+
 
 padding-top: 3.2rem;
     padding-bottom:5.9rem;
 
 
+  }
+
+  .box:nth-child(2){
+padding: 0 6.05rem 0 6.35rem;
   }
 
 }
